# Stellar-soroban-contracts

./: stellar-frontend-integration-guide.md  stellar-project-ideas.md  stellar-smart-contract-guide.md
Stellar-Market-Identity/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUES.md  MAINTAINERS.md  README.md  STYLE.md
Stellar-Market-Identity/frontend/: GUIDE.md  PULL_REQUEST.md  package-lock.json  pnpm-lock.yaml
Stellar-Market-Identity/frontend/public/: round-timer-demo.webm
Stellar-Market-Identity/frontend/src/pages/: Dashboard.tsx
Stellar-Market-Identity/smartcontract/: GUIDE.md  IMPLEMENTATION_COMPLETE.md  INVARIANTS.md  INVARIANTS_IMPLEMENTATION.md  INVARIANTS_QUICK_REFERENCE.md  ORACLE_VALIDATION.md  README_TREASURY.md  TREASURY_DELIVERABLES.md  TREASURY_DOCUMENTATION.md  TREASURY_FINAL_SUMMARY.md  TREASURY_IMPLEMENTATION_COMPLETE.md  TREASURY_INDEX.md  TREASURY_MANIFEST.md  TREASURY_QUICK_REFERENCE.md  TREASURY_VERIFICATION_COMPLETE.md  UPGRADE_SUMMARY.md  package.json  rustfmt.toml
Stellar-Market-Identity/smartcontract/contracts/: lib.rs
Stellar-Market-Identity/smartcontract/contracts/governance/: Cargo.toml  lib.rs
Stellar-Market-Identity/smartcontract/contracts/oracle/: Cargo.toml
Stellar-Market-Identity/smartcontract/contracts/oracle/src/: lib.rs  tests.rs
stellar-insured-contracts/: .gitignore  Cargo.toml  README.md
stellar-insured-contracts/contracts/: Cargo.toml  lib.rs
stellar-insured-contracts/contracts/claims/: Cargo.toml  lib.rs
stellar-insured-contracts/contracts/governance/: Cargo.toml  lib.rs
stellar-insured-contracts/contracts/governance/src/: lib.rs
stellar-insured-contracts/contracts/policy/: Cargo.toml  lib.rs
stellar-insured-contracts/contracts/policy/src/: lib.rs
stellar-insured-contracts/contracts/risk_pool/: Cargo.toml  lib.rs
(+34 files in other folders)
