[package]
name = "governance-contract"
version = "0.1.0"
edition = "2021"

[lib]
name = "governance_contract"
crate-type = ["cdylib"]
path = "lib.rs"

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
