[package]
name = "oracle-contract"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "oracle_contract"
crate-type = ["cdylib"]
path = "lib.rs"

[dependencies]
soroban-sdk = { workspace = true }
soroban-sdk-macros = { workspace = true }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
